--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Clothes Web</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
@@ -23,7 +23,7 @@
             </ul>
             <div class="header-icon">
                  <a href=""><i class='bx bx-search'></i></a>
-                 <a href="./login.html"><i class='bx bx-user' ></i></a>
+                 <a href="./html/login.html"><i class='bx bx-user' ></i></a>
                  <a href=""><i class='bx bx-cart' ></i></a>
                  <a href="" id="menu-bar" ><i class='bx bx-menu' ></i></a>
             </div>
@@ -234,7 +234,7 @@
             <div class="subscribe-form">
                 <input type="text" placeholder="Email">
                 <button>
-                   <a href="./signup.html">Register </a></button>
+                   <a href="./html/signup.html">Register </a></button>
             </div>
            </div>
         </div>
